# wallet

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: build-broker.yaml  build-wallet.yaml
broker/: Dockerfile  README.md  go.mod
broker/cmd/broker/: main.go
broker/deploy/: cloudrun.yaml  k8s.yaml
broker/internal/config/: config.go
broker/internal/relay/: handlers.go  hub.go
docs/: setup-testflight.md
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  frame-client.ts  frame-host.ts  iife.ts  index.ts  qr.ts  react.ts  session.ts  types.ts  ui.ts
wallet/: .easignore  .gitignore  README.md  app.config.ts  eas.json  jest.config.js  metro.config.js  package-lock.json  package.json  splash-preview.html  tsconfig.json
wallet/fixtures/: org.privasys.wallet.google-services.json
wallet/modules/native-keys/: expo-module.config.json  package.json
wallet/modules/native-ratls/: expo-module.config.json  package.json
wallet/modules/native-ratls/android/src/main/jni/: CMakeLists.txt  ratls_jni.c
wallet/modules/notification-service/: app.plugin.js
wallet/modules/passkey-provider/: app.plugin.js  expo-module.config.json  package.json
wallet/plugins/: disable-lint-vital.js  swift-concurrency-fix.js
wallet/src/__tests__/: broker.test.ts  fido2.test.ts  integration.test.ts
wallet/src/components/: AboutPrivasysWallet.tsx  EditScreenInfo.tsx  ExternalLink.tsx  NotificationsProvider.tsx  SplashAnimation.tsx  StyledText.tsx  Themed.tsx  WelcomeScreenInfo.tsx
wallet/src/hooks/: useDeviceUuid.ts  useExpoPushToken.ts
(+49 files in other folders)
